--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,23 @@
         android:theme="@style/Theme.ANDROID_1"
         tools:targetApi="31">
         <activity
+            android:name=".RelativeLayout"
+            android:exported="false" />
+        <activity
+            android:name=".LinearLayout"
+            android:exported="false"
+            android:label="@string/title_activity_linear_layout"
+            android:theme="@style/Theme.ANDROID_1" />
+        <activity
+            android:name=".ConstraintLayout"
+            android:exported="false" />
+        <activity
+            android:name=".RlativeLayout"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
